src/test/examples/custom/invalid/semanticErr/class/classFunctionsHaveTheSameName.wacc
begin
  class H is 
    private int v
    H(int v) 
    end
    private int J() is 
      return 0
    end
    private char J() is 
      return 'c'
    end
  end
  int u = 0
end